// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderFindings > snapshot — mixed severities + manual-review + parse-error 1`] = `
"× critical  src/server.ts:42:3  stripe/missing-signature-verification  not-verified
  Stripe webhook handler does not appear to verify the signature header.
  docs › https://stripe.com/docs/webhooks

▲ medium    src/gh.ts:7:1  github/missing-timing-safe-equal  manual-review
  Use crypto.timingSafeEqual to compare signatures.
  docs › https://docs.github.com/en/webhooks/using-webhooks/validating-webhook-deliveries
  next › review the handler in context. If the missing check lives outside this file (gateway, dedupe table,
         conditional verification), run \`hookwarden scan --baseline write\` to accept it.

?  src/broken.ts:1:1  parse error
  Parse error: unexpected token

"
`;

exports[`renderFindings > snapshot — one critical finding (canonical Stripe bug) 1`] = `
"× critical  src/server.ts:42:3  stripe/missing-signature-verification  not-verified
  Stripe webhook handler does not appear to verify the signature header.
  docs › https://stripe.com/docs/webhooks

"
`;

exports[`renderFindings > snapshot — zero findings 1`] = `
"No findings.
"
`;
